--- a/ci.yml
+++ b/ci.yml
@@ -24,8 +24,10 @@ jobs:
       - name: Install dependencies
         run: |
           Rscript -e 'install.packages("remotes", repos = "https://cloud.r-project.org")'
-          Rscript -e 'remotes::install_deps(dependencies = TRUE)'
-          Rscript -e 'install.packages("devtools", repos = "https://cloud.r-project.org")'
+          Rscript -e 'remotes::install_deps(dependencies = c("Depends", "Imports", "Suggests"))'
+
+      - name: Install devtools
+        run: Rscript -e 'install.packages("devtools", repos = "https://cloud.r-project.org")'
 
       - name: Runs tests
         run: Rscript -e 'devtools::test()'
